Rebase and add better tests